Day1-hw/main.tf
# Day 1 hw - only t2.micro (Free Tier) and Virginia because it is free from Tax
provider "aws" {
  region = "us-east-1"
}

resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
}

resource "aws_internet_gateway" "public_gw" {
  vpc_id = aws_vpc.main.id
}

resource "aws_subnet" "public" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.1.0/24"
  map_public_ip_on_launch = true
}

resource "aws_subnet" "private1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.2.0/24"
  availability_zone = "us-east-1a"
}

resource "aws_subnet" "private2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.3.0/24"
  availability_zone = "us-east-1b"
}

resource "aws_security_group" "instance_sg" {
  vpc_id = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "instance1" {
  ami             = "ami-09e67e426f25ce0d7"  # Amazon Linux AMI
  instance_type   = "t2.micro"
  subnet_id       = aws_subnet.public.id
  security_groups = [aws_security_group.instance_sg.id]
}

resource "aws_instance" "instance2" {
  ami             = "ami-09e67e426f25ce0d7"  # Amazon Linux AMI
  instance_type   = "t2.micro"
  subnet_id       = aws_subnet.private1.id
  security_groups = [aws_security_group.instance_sg.id]
}

resource "aws_instance" "instance3" {
  ami             = "ami-09e67e426f25ce0d7"  # Amazon Linux AMI
  instance_type   = "t2.micro"
  subnet_id       = aws_subnet.private2.id
  security_groups = [aws_security_group.instance_sg.id]
}

resource "aws_eip" "instance1_eip" {
  instance = aws_instance.instance1.id
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
}

resource "aws_route" "public_internet_gateway" {
  route_table_id         = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.public_gw.id
}

resource "aws_route_table_association" "public_subnet_association" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}
